# test_001

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: Release  Release.yml  main.yml  main1.yml  main2.yam  main4  main4.yml
src/: App.tsx  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  translate_config.json
src-tauri/capabilities/: app.json  autostart.json  clipboard.json  default.json  event.json  fs.json  global-shortcut.json  http.json  notification.json  path.json  process.json  shell.json  window.json
src-tauri/src/: ai.rs  clipboard.rs  clipboard_monitor.rs  lib.rs  main.rs  role.rs  role_storage.rs  storage.rs  translation.rs
src/api/: apiClient.ts
src/components/: AIProviderSelector.tsx  CategoryTag.tsx  ChatSettingsPopover.tsx  FloatClipboard.tsx  MarkdownRenderer.tsx  ModelSelectionGrid.tsx  RoleSelectionGrid.tsx  ShortcutExample.tsx  Sidebar.tsx  TitleBar.tsx  TranslationResult.tsx
src/constants/: aiProviders.ts  categories.ts
src/context/: ThemeContext.tsx
src/hooks/: useShortcut.ts
src/models/: ai.ts  chat.ts  clipboard.ts  role.ts
src/pages/: AISettings.tsx  CategorySettings.tsx  Chat.tsx  FloatClipboard.css  FloatClipboard.tsx  Home.css  Home.tsx  Roles.tsx  Settings.tsx  ShortcutSettings.tsx  TranslationSettings.tsx  WindowSettings.tsx  index.tsx
src/store/: aiSettingsStore.ts  analysisDataStore.ts  analysisStore.ts  chatStore.ts  chatUserPrefsStore.ts  clipboardStore.ts  roleStore.ts
src/styles/: card.css  chat-dark-theme.css  (+3 more)
(+2 files in other folders)
