[package]
name = "copy2ai"
version = "0.1.0"
description = "A clipboard history manager with AI features"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copy2ai_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.17", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.34"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
arboard = "3.3.0"
parking_lot = "0.12"
lazy_static = "1.4"
image = "0.24"
base64 = "0.21"
regex = "1.5"
directories = "5.0"
md5 = "0.7.0"
rand = "0.8.5"
tauri-plugin-os = "2.2.1"
sysinfo = "0.29.10"
tauri-plugin-http = "2.4.3"
futures = "0.3"
encoding_rs = "0.8.33"
futures-util = "0.3.30"
tokio-util = { version = "0.7.10", features = ["io", "codec"] }

